// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MyFyghterContainer after loading 1`] = `
<Fragment>
  <Divider
    orientation="left"
    style={
      Object {
        "color": "#333",
        "fontWeight": "normal",
      }
    }
  >
    My Fyghter
  </Divider>
  <Row
    gutter={
      Array [
        16,
        24,
      ]
    }
  >
    <Col
      span={24}
    >
      <Component
        fyghter={
          Object {
            "balance": BigNumber {
              "_hex": "0x05",
              "_isBigNumber": true,
            },
            "id": BigNumber {
              "_hex": "0x01",
              "_isBigNumber": true,
            },
            "name": "John",
            "skin": "normal_guy",
            "xp": BigNumber {
              "_hex": "0x05",
              "_isBigNumber": true,
            },
          }
        }
      />
      <p />
      <Alert
        message="You have to sign in first!"
        type="warning"
      />
    </Col>
  </Row>
</Fragment>
`;

exports[`MyFyghterContainer loading 1`] = `
<Fragment>
  <Divider
    orientation="left"
    style={
      Object {
        "color": "#333",
        "fontWeight": "normal",
      }
    }
  >
    My Fyghter
  </Divider>
  <Row
    gutter={
      Array [
        16,
        24,
      ]
    }
  >
    <Col
      span={24}
    >
      Loading...
      <p />
      <Alert
        message="You have to sign in first!"
        type="warning"
      />
    </Col>
  </Row>
</Fragment>
`;
